2011-11-13  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Fix the bug that unconditionally adds
	`emacs21' and `url-emacs21' into `load-path' on byte-compilation.
	On byte-compilation, the directories `emacs21' and `url-emacs21',
	which are included in the repository of twittering-mode, were
	unconditionally added into `load-path'. Due to this bug, some
	macros were embedded as obsolete definitions for Emacs21 in the
	result of byte-compilation. Some functions in the result cause
	errors on Emacs 22 or later because the obsolete definitions
	conflict with Emacs newer than 21. On Emacs 22 or later, the
	directories are no longer added to `load-path' on
	byte-compilation.
	Thanks to HKey who has discovered the bug.

2011-08-17  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Correctly store icons when
	`twittering-convert-fix-size' is nil.
	(twittering-save-icon-properties): correctly generate stored
	representation of icon images when its size is not specified
	explicitly.

2011-08-13  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Save icons correctly when
	`twittering-icon-storage-limit' is nil. Thanks to HufflepuffBR who
	reported this problem.
	(twittering-save-icon-properties): fix the list representation of
	stored data when `twittering-icon-storage-limit' is nil.

2011-07-29  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: The hash by newer algorithm introduced in
	OpenSSL 1.0.0 is also generated for each certificate. This is
	required because OpenSSL 1.0.0 and later fails to find an
	appropriate certificate if its name is based on the hash by the
	older algorithm which has been used by OpenSSL before 1.0.0.
	Thanks to Sakuma who reported this problem.
	(twittering-ca-cert-alist): redefined as a constant. And each
	entry has the hash generated by OpenSSL 1.0.0 and later.
	(twittering-delete-ca-cert): delete multiple files for each
	certificate.
	(twittering-ensure-ca-cert): generate two files for each